2002-08-17  Christopher Armstrong  <radix@twistedmatrix.com>

	* Releasing Twisted 0.99.0rc8, with a fix to tap2deb and 
	slightly updated options documentation.

	* Releasing Twisted 0.99.0rc9 with fixes to release-twisted
	and doc/howto/options.html.

2002-08-16  Christopher Armstrong  <radix@twistedmatrix.com>

	* Releasing Twisted 0.99.0rc6, with some fixes to setup.py
	* Releasing Twisted 0.99.0rc7, __init__.py fixes.

2002-08-15  Christopher Armstrong  <radix@twistedmatrix.com>

	* Releasing Twisted 0.99.0rc5, with some one severe bug-fix and
	a few smaller ones.

2002-08-14  Christopher Armstrong  <radix@twistedmatrix.com>

	* Releasing Twisted 0.99.0rc1! ON THE WAY TO 1.0, BABY!  
	* Releasing Twisted 0.99.0rc2! Sorry, typoed the version number in
	copyright.py
	* Releasing Twisted 0.99.0rc3! I HATE TAGGING!
	* Releasing Twisted 0.99.0rc4, some very minor errors fixed.

2002-08-14  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted.internet, twisted.cred: Applications and Authorizers are
	now completely decoupled, save for a tiny backwards-compatibility.

2002-08-10  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted.internet.defer, twisted.python.failure: Changes to
	Deferred and Failure to make errbacks more consistent. error
	callbacks are now *guaranteed* to be passed a Failure instance,
	no matter what was passed to Deferred.errback().

2002-08-07  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted.python.usage: New "subcommands" feature for
	usage.Options: Now, you can have nested commands
	(`cvs commit'-style) for your usage.Options programs.

2002-08-04  Bruce Mitchener  <bruce@twistedmatrix.com>

	* twisted.internet: New `writeSequence' method on transport
	objects: This can increase efficiency as compared to `write`ing
	concatenated strings, by copying less data in memory.
	
2002-08-02  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted.cred.service, twisted.internet.app: Application/Service