@@ -17,11 +17,11 @@
 <p> To install Twisted, just make sure the
 <code>Twisted-$VERSION/</code> directory is in the
 "<code>PYTHONPATH</code>" environment variable. For example, if you
-extracted Twisted-0.99.0rc9.tar.gz to /home/bob/, then you would have
+extracted Twisted-0.99.0.tar.gz to /home/bob/, then you would have
 something like: </p>
 
 <pre class="shell">
-export PYTHONPATH=$PYTHONPATH:/home/bob/Twisted-0.99.0rc9/
+export PYTHONPATH=$PYTHONPATH:/home/bob/Twisted-0.99.0/
 </pre>
 
 <p> in your <code>~/.bash_profile</code>, <code>~/.zshrc</code>,
