@@ -1,3 +1,7 @@
+2002-08-18  Christopher Armstrong  <radix@twistedmatrix.com>
+
+	* Releasing Twisted 0.99.0 final. No changes since rc9.
+
 2002-08-17  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* Releasing Twisted 0.99.0rc8, with a fix to tap2deb and 
